--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "rtc-utils",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:client": "browserify ./client -o ./public/main.js",
+    "start": "nodemon --exec 'npm run build:client && node server.js' --ignore 'public/'"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "twilio": "^3.15.1",
+    "twilio-video": "^1.8.0"
+  }
 }
